Changes of tre-0.5 relative to tre-0.4:
  * LOG-MESSAGE returns its argument if logging is switched
    off.

Changes of tre-0.4 relative to tre-0.3:
  * PHP: LENGTH returns correct value for wrapped arrays.
  * PHP: Issue an error when trying to convert a cons into
         string.
  * JavaScript/PHP: %%%MAKE-HASH-TABLE is now %%%MAKE-OBJECT.
  * JavaScript: MAKE-OBJECT: New function to use dynamically
                generated keys.

RELEASES:

Changes of tre-0.3 relative to tre-0.2:
  * JavaScript: PROPERTY-NAME, PROPERTY-ALIST,
    ALIST-PROPERTIES: New core functions.
  * JavaScript: PROPERTY-REMOVE: New core codegen macro.
  * JavaScript: NEW returns an empty object when used without
    arguments.

Changes of tre-0.2 relative to tre-0.1:
  * Major cleanup.
  * Additional basic optimisations.
  * Forbids use of macro names as argument names.
  * DEFUN is now FN.
  * DEVAR is now VAR.
  * ALET is now !=.
  * EQL is converted to EQ for literal symbols.
  * In DEFCLASS Macro SUPER denotes the parent class constructor.
  * Macro MACROLET added.

Changes of tre-0.1 relative to tre-0.0:
  * Removed parts that are not working anymore.
  * Compiler cannot translate itself to JS, C or bytecode anymore.